# avd

./: .gitignore  cli.py  config.py  pyproject.toml  requirements.txt  setup.cfg
scripts/: README.md  start-avd
