[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "avd"
version = "0.1.0"
description = "Always-running Android emulator for macOS"
authors = [{name = "DevArunLingala"}]
dependencies = [
    "typer[all]",
    "rich",
    "tomlkit",
    "psutil",
]
requires-python = ">=3.12"

[project.scripts]
avd = "avd.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["avd"]  # â† FIX: Tells Hatchling where your code lives
